--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -1,44 +1,42 @@
 .container {
-    margin-top: 10px;
-    width: 140px;
-    height: 30px;
+  margin-top: 10px;
+  width: 140px;
+  height: 30px;
+  position: relative;
+  left: -5px;
+  transition: 0.7s ease;
+  padding-right: 8px;
+  margin-bottom: 40px;
+
+  &:hover {
+    width: 870px;
+  }
+
+  .links {
+    display: flex;
+    gap: 15px;
+    float: right;
     position: relative;
-    left: -5px;
-    transition: .7s ease;
-    padding-right: 8px;
-    margin-bottom: 40px;
-
-    &:hover {
-        width: 870px;
+    button a {
+      color: white;
+      text-decoration: none;
     }
-
-    .links {
-        display: flex;
-        gap: 15px;
-        float: right;
-        position: relative;
-        button a {
-            color: white;
-            text-decoration: none;
-        }
+  }
+  .link {
+    width: 120px;
+    height: 40px;
+    padding: 5px;
+    background: #7e97d3;
+    color: #000000;
+    border-radius: 10px 0;
+    display: flex;
+    align-items: center;
+    a {
+      text-decoration: none;
+      color: #000000;
     }
-    .link {
-        width: 120px;
-        height: 40px;
-        padding: 5px;
-        background: #7e97d3;
-        color: #000000;
-        border-radius: 10px 0;
-        display: flex;
-        align-items: center;
-        a {
-            text-decoration: none;
-            color: #000000;
-        }
-        a.active {
-            color: white;
-        }
+    a.active {
+      color: white;
     }
+  }
 }
-
-
