--- a/src/features/Login/Login.module.scss
+++ b/src/features/Login/Login.module.scss
@@ -1,42 +1,41 @@
-.login {
-  text-align: center;
-  margin-top: 20px;
-  .styleH1 {
-    line-height: 32px;
-    font-weight: 600;
-    font-size: 26px;
-    color: #000000;
+.container {
+  width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+
+  .FormControl {
+    width: 100%;
+
+    .title {
+      text-align: center;
+      font-weight: 600;
+      font-size: 26px;
+      line-height: 32px;
+      margin: 0 0 30px;
+    }
+
+    .wrapper {
+      width: inherit;
+
+      .forgotPassword {
+        font-weight: 500;
+        margin-top: 30px;
+        text-decoration: none;
+        display: flex;
+        justify-content: flex-end;
+      }
+    }
   }
-  .styleP {
-    color: #000000;
-    opacity: 0.5;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 24px;
+
+  .text {
+    margin-top: 30px;
+    margin-bottom: 10px;
   }
-  .signUp {
+
+  .signUpLink {
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
     color: #366EFF;
-    text-decoration: none;
-    &:hover {
-      color: #0457bb;
-    }
-  }
-  .forgotPassword {
-    width: 128px;
-    height: 17px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    text-decoration: none;
-    color: #000000;
-    &:hover {
-      color: #526673;
-    }
   }
 }
-
-
