--- a/src/features/AuthPages/EnteringANewPassword/EnteringANewPassword.module.scss
+++ b/src/features/AuthPages/EnteringANewPassword/EnteringANewPassword.module.scss
@@ -1,13 +1,15 @@
+@import '../cards-2.0/src/common/style/Variables';
 .container {
-  width: 600px;
-  margin: 0 auto;
-  padding: 30px;
-  text-align: center;
+  @include authContainer();
+
+  .title {
+    @include authTitle();
+  }
 
   .form{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 15px;
   }
 }
