--- a/src/features/Profile/Profile.module.scss
+++ b/src/features/Profile/Profile.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 300px;
-  margin: 0 auto;
+  margin: 70px auto;
   padding: 60px;
 
   .title {
