--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -1,43 +1,43 @@
-.container {
-  margin-top: 10px;
-  width: 140px;
-  height: 30px;
-  position: relative;
-  left: -5px;
-  transition: 0.7s ease;
-  padding-right: 8px;
-  margin-bottom: 40px;
+.bar {
+  top: 0;
+  align-items: center;
+  padding: 0 33px;
+  box-shadow: 0 2px 10px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 
-  &:hover {
-    width: 1005px;
-  }
+  .toolbar{
+    max-width: 1200px;
+    min-height: 60px;
+    width: inherit;
 
-  .links {
-    display: flex;
-    gap: 15px;
-    float: right;
-    position: relative;
-    button a {
-      color: white;
-      text-decoration: none;
+    .logo {
+      height: 48px;
+      width: 209px;
+      background-image: url("../../logo.svg");
+      background-position: center;
+      background-size: contain;
     }
-  }
-  .link {
-    width: 120px;
-    height: 40px;
-    padding: 5px;
-    background: #7e97d3;
-    color: #000000;
-    border-radius: 10px 0;
-    display: flex;
-    align-items: center;
-    a {
-      text-decoration: none;
-      color: #000000;
-    }
-    a.active {
-      color: #ffffff;
-      font-size: large;
+    .wrapper{
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 12px;
+
+      .name{
+        color: black;
+        font-weight: 600;
+        text-decoration: underline;
+        cursor: pointer;
+      }
+      .ava{
+        width: 36px;
+        height: 36px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 50%;
+      }
+
     }
   }
 }
