--- a/src/features/Header/Header.module.scss
+++ b/src/features/Header/Header.module.scss
@@ -4,32 +4,38 @@
   padding: 0 33px;
   box-shadow: 0 2px 10px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 
-  .toolbar{
+  .toolbar {
     max-width: 1200px;
     min-height: 60px;
     width: inherit;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
 
     .logo {
-      height: 48px;
-      width: 209px;
-      background-image: url("../../logo.svg");
+      height: 50px;
+      width: 190px;
+      background-image: url("../../assets/images/learn.png");
       background-position: center;
       background-size: contain;
     }
-    .wrapper{
+
+    .wrapper {
       position: relative;
       display: flex;
       flex-direction: row;
       align-items: center;
       gap: 12px;
 
-      .name{
+      .name {
         color: black;
         font-weight: 600;
-        text-decoration: underline;
+        font-size: 22px;
+        text-decoration: none;
         cursor: pointer;
       }
-      .ava{
+
+      .ava {
         width: 36px;
         height: 36px;
         background-size: cover;
@@ -37,7 +43,6 @@
         background-repeat: no-repeat;
         border-radius: 50%;
       }
-
     }
   }
 }
