fix: added packs list component

--- a/src/features/Profile/Profile.module.scss
+++ b/src/features/Profile/Profile.module.scss
@@ -1,3 +1,9 @@
+.backToPacks {
+  padding: 0 140px;
+  position: absolute;
+  width: 200px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
