--- a/src/features/PacksList/PacksList.module.scss
+++ b/src/features/PacksList/PacksList.module.scss
@@ -1,6 +1,4 @@
 .packsList{
-    display: flex;
+    max-width: 1200px ;
     margin: 140px auto;
-    justify-content: center;
-    align-items: center;
 }
