feat: added error404 page

--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -15,7 +15,7 @@
     .logo {
       height: 50px;
       width: 190px;
-      background-image: url("../../assets/images/learn.png");
+      background-image: url("../../../assets/images/learn.png");
       background-position: center;
       background-size: contain;
     }
