--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -15,9 +15,18 @@
     .logo {
       height: 50px;
       width: 190px;
-      background-image: url("../../../assets/images/learn.png");
+      background-image: url("../../../assets/images/logo.svg");
       background-position: center;
       background-size: contain;
+      background-repeat: no-repeat;
+
+      &:hover {
+        opacity: 0.7;
+      }
+
+      &:active {
+        opacity: 0.5;
+      }
     }
 
     .wrapper {
