fix: ForgotPassword scss

--- a/src/features/AuthPages/ForgotPassword/ForgotPassword.module.scss
+++ b/src/features/AuthPages/ForgotPassword/ForgotPassword.module.scss
@@ -3,7 +3,49 @@
 
 .container {
   @include authContainer();
-  .authError{
+
+  .authError {
     @include authError();
+  }
+
+  .title {
+    margin: 0 0 20px;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 32px;
+  }
+
+  .subTitle {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 25px 0;
+    opacity: 0.5;
+  }
+
+  .questionTitle {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 25px 0;
+    opacity: 0.5;
+  }
+
+  .pathLogin {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-decoration-line: none;
+    color: #366EFF;
+
+    &:hover {
+      opacity: 0.7;
+      text-decoration-line: underline;
+    }
+
+    &:active {
+      opacity: 0.5;
+      text-decoration-line: underline;
+    }
   }
 }
