--- a/src/common/components/BackToPacksList/BackToPacksList.module.scss
+++ b/src/common/components/BackToPacksList/BackToPacksList.module.scss
@@ -1,5 +1,21 @@
-.text {
+.content {
+    transition: 1s;
     cursor: pointer;
     display: flex;
-    gap: 20px;
+    gap: 10px;
+
+    &:hover {
+        transform: translatex(-10px);
+    }
+
+    &:active {
+        opacity: 0.3;
+    }
 }
+
+.text {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 24px;
+}
+
