--- a/src/common/components/EditableSpan/EditableSpan.module.css
+++ b/src/common/components/EditableSpan/EditableSpan.module.css
@@ -18,3 +18,10 @@
   bottom: 4px;
   right: -8px;
 }
+
+.nickName{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 20px 0;
+}
