--- a/src/common/components/BasicModal/BasicModal.module.css
+++ b/src/common/components/BasicModal/BasicModal.module.css
@@ -3,6 +3,7 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
+    color: #2D2E46;
 }
 
 .modalHeader {
@@ -10,9 +11,12 @@
     justify-content: space-between;
     border-bottom: 1px solid #D9D9D9;
     align-items: center;
-    padding: 18px 24px;
+    padding: 10px 20px;
 }
 
 .modalBody {
-    padding: 30px 24px 50px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    padding: 25px;
 }
