--- a/src/features/PacksList/PacksList.module.scss
+++ b/src/features/PacksList/PacksList.module.scss
@@ -14,9 +14,10 @@
     width: 1200px;
 
     .title {
-        width: 100%;
+        //width: 100%;
         display: flex;
         align-items: center;
+        //margin: 0;
     }
     .search {
         width: 100%;
